--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ payout_dates.json
 event_records.json
 qa_rewards_history.json
 gm_rewards_history.json
+helper_rewards_history.json
 __pycache__/
 dist/
 .idea/
